--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 html, body {
-  background-color: #222;
+  background-color: #373D20;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -107,7 +107,7 @@ ul.categories {
   margin-top: 15px;
   margin-right: 5px;
   border-top: 1px solid #666;
-  color: #666;
+  color: #BCBD8B;
 }
 
 .category--name h6 {
@@ -181,7 +181,7 @@ li.category {
 }
 
 .category--image-container {
-  background: #222;
+  background: #373D20;
   -webkit-transition: all 500ms ease;
   transition: all 500ms ease;
 }
