--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ ul.categories {
 .box {
   width            : 100%;
   overflow         : hidden;
-  padding          : 10px;
+  padding          : 0px;
   border           : 1px solid #f5f5f5;
   background-color : #f8f8f8;
 }
@@ -88,7 +88,7 @@ ul.categories {
 }
 
 .category--content .project-list {
-  padding: 0 0 0 30px;
+  padding: 0 0 0 0;
 }
 
 .category--content,
@@ -105,7 +105,7 @@ ul.categories {
   transition: all 0.5s ease;
   padding-top: 5px;
   margin-top: 15px;
-  margin-right: 5px;
+  margin-right: 0px;
   border-top: 1px solid #666;
   color: #BCBD8B;
 }
@@ -162,7 +162,7 @@ ul.categories {
 }
 
 .isLast .category--content .project-list {
-  padding: 0 30px 0 0;
+  padding: 0 0px 0 0;
 }
 
 .isLast .category--content,
@@ -251,8 +251,8 @@ li.category.isActive {
 }
 
 .category--closeButton a {
-  margin: -15px;
-  padding: 15px;
+  margin: 0px;
+  padding: 0px;
 }
 
 /*hover state*/
@@ -264,3 +264,38 @@ li.category.isActive {
   border-color: #eee;
   color: #eee;
 }
+
+.no-padding {
+  padding: 0px;
+  margin: 0px;
+}
+
+.middle {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+#app-container {
+  width: 420px;
+  display: block;
+  position: relative;
+  margin: 10px auto;
+  background: #fff;
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+}
+
+#no-gutters {
+  margin-right: 0;
+  margin-left: 0;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.tyrone {
+  width: 100%;
+  height: 100%;
+}
+
+
