blocks now change color

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 html, body {
-  background-color: #373D20;
+  background-color: white;
   width: 100%;
   height: 100%;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  font-family: Lato, Helvetica;
 }
 
 .card-img-left {
@@ -198,7 +202,6 @@ li.category {
 }
 
 .category--image-container {
-  background: #373D20;
   -webkit-transition: all 500ms ease;
   transition: all 500ms ease;
 }
@@ -301,4 +304,7 @@ li.category.isActive {
   height: 100%;
 }
 
+.bg-dark {
+  background: rgba(50, 150, 50, 1);
+}
 
