adding navbar shadow

--- a/src/App.css
+++ b/src/App.css
@@ -308,3 +308,8 @@ li.category.isActive {
   background: rgba(50, 150, 50, 1);
 }
 
+.navbar {
+    -webkit-box-shadow: 0 8px 6px -6px #999;
+    -moz-box-shadow: 0 8px 6px -6px #999;
+    box-shadow: 0 8px 6px -6px #999;
+}
