--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 html, body {
   background-color: white;
+  font-family: Lato, Raleway, Helvetica;
   width: 100%;
   height: 100%;
 }
@@ -313,3 +314,42 @@ li.category.isActive {
     -moz-box-shadow: 0 8px 6px -6px #999;
     box-shadow: 0 8px 6px -6px #999;
 }
+
+.category--image h3 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  color: rgb(10, 30, 10);
+  font-family: Lato, Helvetica;
+  font-size: 1.3em;
+  -webkit-transition: background 0.5s ease-out;
+  -moz-transition: background 0.5s ease-out;
+  -o-transition: background 0.5s ease-out;
+  transition: background 0.5s ease-out;
+  height: 1px; width: 1px; 
+  overflow: hidden;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+}
+
+.category--image:hover h3 {
+  display: block;
+  height:auto;
+  width: 236px;
+  height: 150px;
+  overflow: auto;
+  clip: auto;
+  background: rgba(0, 0, 0, 0.2)
+}
+
+.full {
+  width: 100%;
+  height: 100%;
+}
+
+
