created add friend form

--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,7 @@ ul.categories {
   max-height : 0;
 }
 
-
+w
 /*content*/
 .category--content {
   position: absolute;
@@ -381,5 +381,111 @@ li.category.isActive {
 .btn-outline-dark:active {
   background-color: green;
 }
+
+.popup {
+  border: 1px solid;
+  padding: 12px;
+  background: #ccc;
+  opacity: 1;
+  width: 200px;
+  animation: fade 3000ms ease;
+  animation-iteration-count:infinite;
+}
+
+@keyframes fade {
+  0%,100% { opacity: 0 }
+  30%, 70% { opacity: 1 }
+}
+
+#article {
+      -moz-transform: translateY(0.25rem);
+      -webkit-transform: translateY(0.25rem);
+      -ms-transform: translateY(0.25rem);
+      transform: translateY(0.25rem);
+      -moz-transition: opacity 0.325s ease-in-out, -moz-transform 0.325s ease-in-out;
+      -webkit-transition: opacity 0.325s ease-in-out, -webkit-transform 0.325s ease-in-out;
+      -ms-transition: opacity 0.325s ease-in-out, -ms-transform 0.325s ease-in-out;
+      transition: opacity 0.325s ease-in-out, transform 0.325s ease-in-out;
+      padding: 4.5rem 2.5rem 1.5rem 2.5rem ;
+      position: relative;
+      width: 40rem;
+      max-width: 100%;
+      background-color: rgba(27, 31, 34, 0.85);
+      border-radius: 4px;
+      opacity: 0;
+    }
+
+      #article.active {
+        -moz-transform: translateY(0);
+        -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 1;
+      }
+
+      #article .close {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 4rem;
+        height: 4rem;
+        cursor: pointer;
+        text-indent: 4rem;
+        overflow: hidden;
+        white-space: nowrap;
+      }
+
+        #article .close:before {
+          -moz-transition: background-color 0.2s ease-in-out;
+          -webkit-transition: background-color 0.2s ease-in-out;
+          -ms-transition: background-color 0.2s ease-in-out;
+          transition: background-color 0.2s ease-in-out;
+          content: '';
+          display: block;
+          position: absolute;
+          top: 0.75rem;
+          left: 0.75rem;
+          width: 2.5rem;
+          height: 2.5rem;
+          border-radius: 100%;
+          background-position: center;
+          background-size: 20px 20px;
+          background-repeat: no-repeat;
+        }
+
+        #article .close:hover:before {
+          background-color: rgba(255, 255, 255, 0.075);
+        }
+
+        #article .close:active:before {
+          background-color: rgba(255, 255, 255, 0.175);
+        }
+
+    @media screen and (max-width: 736px) {
+
+      #article {
+        padding: 3.5rem 2rem 0.5rem 2rem ;
+      }
+
+        #article .close:before {
+          top: 0.875rem;
+          left: 0.875rem;
+          width: 2.25rem;
+          height: 2.25rem;
+          background-size: 14px 14px;
+        }
+
+    }
+
+    @media screen and (max-width: 480px) {
+
+      #article {
+        padding: 3rem 1.5rem 0.5rem 1.5rem ;
+      }
+
+    }
+
+
 
 
