--- a/src/App.css
+++ b/src/App.css
@@ -341,6 +341,11 @@ li.category.isActive {
 .navbar-main {
 }
 
+.navbar-center {
+    position: absolute;
+    text-align: center;
+}
+
 .nav-item {
   padding: 5px;
 }
