--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 html, body {
   background-color: white;
-  font-family: 'Catamaran', 'Cabin', 'Muli', 'Open Sans', 'Lato', Helvetica;
+  font-family: 'Khula', 'Catamaran', 'Open Sans', 'Lato', Helvetica;
   width: 100%;
   height: 100%;
 }
 
 h1, h2, h3, h4, h5, h6, p, a {
-  font-family: 'Catamaran', 'Cabin', 'Muli', 'Open Sans', 'Lato', Helvetica;
+  font-family: 'Khula', 'Catamaran', 'Open Sans', 'Lato', Helvetica;
 }
 
 .card-img-left {
@@ -334,6 +334,10 @@ li.category.isActive {
     box-shadow: 0 5px 6px -6px #999;
 }
 
+#my-navbar {
+  background: rgba(255, 255, 255, 0.95);
+}
+
 .navbar a img {
   width: 40px;
 }
@@ -351,7 +355,7 @@ li.category.isActive {
 }
 
 .nav-link:hover {
-  box-shadow: inset 0 0px 0 white, inset 0 -2px 0 #9eb120;
+  box-shadow: inset 0 0px 0 white, inset 0 -2px 0 #64af22;
 }
 
 .category--image h6 {
@@ -412,6 +416,38 @@ li.category.isActive {
   animation-iteration-count:infinite;
 }
 
+.btn {
+  border-radius: 3px;
+}
+
+.btn-sprout-light {
+  color: #9ecc3a;
+  background: white;
+  border-width: 2px;
+  border-color: #9ecc3a;
+}
+
+.btn-sprout-light:hover {
+  color: white;
+  background: #9ecc3a;
+}
+
+.btn-sprout-light i:hover {
+  color: white;
+}
+
+.btn-sprout-dark {
+  color: #64af22;
+  background: white;
+  border-width: 2px;
+  border-color: #64af22;
+}
+
+.btn-sprout-dark:hover {
+  color: white;
+  background: #64af22;
+}
+
 .btn-success {
   color: #000;
   background: rgb(245,255,245);
@@ -446,6 +482,7 @@ li.category.isActive {
 .btn-outline-dark {
   color: #000;
   background: rgba(145,145,145, 0.05);
+  border-radius: 3px;
 }
 
 @keyframes fade {
