--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,39 @@
-html, body {
+html,
+body {
   background-color: white;
-  font-family: 'Khula', 'Catamaran', 'Open Sans', 'Lato', Helvetica;
+  font-family: "Khula", "Catamaran", "Open Sans", "Lato", Helvetica;
   width: 100%;
   height: 100%;
 }
 
-h1, h2, h3, h4, h5, h6, p, a {
-  font-family: 'Khula', 'Catamaran', 'Open Sans', 'Lato', Helvetica;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a {
+  font-family: "Khula", "Catamaran", "Open Sans", "Lato", Helvetica;
   color: rgba(50, 50, 50, 0.8);
 }
 
 .center-cropped {
-  padding-bottom:100%; 
-  overflow:hidden; 
-  position:relative
+  padding-bottom: 100%;
+  overflow: hidden;
+  position: relative;
 }
 
 .card-img-left {
-  border-bottom-left-radius: calc(.25rem - 1px);
-  border-top-left-radius: calc(.25rem - 1px);
+  border-bottom-left-radius: calc(0.25rem - 1px);
+  border-top-left-radius: calc(0.25rem - 1px);
   float: left;
   padding-right: 1em;
   margin-bottom: -1.25em;
 }
 
-a:hover, a:hover > * {
+a:hover,
+a:hover > * {
   color: grey;
 }
 
@@ -44,7 +53,7 @@ ul.categories {
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .category {
@@ -52,38 +61,38 @@ ul.categories {
 }
 
 .box {
-  width            : 100%;
-  overflow         : hidden;
-  padding          : 0px;
-  border           : 1px solid #f5f5f5;
-  background-color : #f8f8f8;
+  width: 100%;
+  overflow: hidden;
+  padding: 0px;
+  border: 1px solid #f5f5f5;
+  background-color: #f8f8f8;
 }
 
 .slide-appear {
-  opacity    : 0;
-  transition : opacity .7s ease-in;
+  opacity: 0;
+  transition: opacity 0.7s ease-in;
 }
 
 .slide-appear.slide-appear-active {
-  opacity : 1;
+  opacity: 1;
 }
 
 .slide-enter {
-  max-height : 0;
-  transition : all .3s ease-in;
+  max-height: 0;
+  transition: all 0.3s ease-in;
 }
 
 .slide-enter.slide-enter-active {
-  max-height : 1000px;
+  max-height: 1000px;
 }
 
 .slide-leave {
-  max-height : 1000px;
-  transition : all .3s ease-out;
+  max-height: 1000px;
+  transition: all 0.3s ease-out;
 }
 
 .slide-leave.slide-leave-active {
-  max-height : 0;
+  max-height: 0;
 }
 
 w
@@ -94,14 +103,14 @@ w
   white-space: nowrap;
   right: 0;
   -webkit-transform: translateX(100%);
-          transform: translateX(100%);
+  transform: translateX(100%);
 }
 
 .category--content h2 {
   text-align: left;
   font-size: 44px;
   -webkit-transform: translateX(-50px);
-          transform: translateX(-50px);
+  transform: translateX(-50px);
   text-transform: uppercase;
   font-weight: bold;
 }
@@ -125,7 +134,7 @@ w
   padding-top: 5px;
   margin-right: 0px;
   border-top: 1px solid #666;
-  color: #BCBD8B;
+  color: #bcbd8b;
 }
 
 .category--name h6 {
@@ -148,21 +157,21 @@ w
 
 .projectlist--byline {
   font-size: 12px;
-  font-family: 'Nothing You Could Do', sans-serif;
+  font-family: "Nothing You Could Do", sans-serif;
 }
 
 .projectlist--explore {
   font-size: 12px;
   font-weight: bold;
-  font-family: 'Nothing You Could Do', sans-serif;
-  color: #BCBD8B;
+  font-family: "Nothing You Could Do", sans-serif;
+  color: #bcbd8b;
 }
 
 .projectlist--complete {
   font-size: 12px;
   font-weight: bold;
-  color:#EFF1ED;
-  font-family: 'Nothing You Could Do', sans-serif;
+  color: #eff1ed;
+  font-family: "Nothing You Could Do", sans-serif;
 }
 
 /*last item content*/
@@ -170,12 +179,12 @@ w
   right: initial;
   left: 0;
   -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
+  transform: translateX(-100%);
 }
 
 .isLast .category--content h2 {
   -webkit-transform: translateX(50px);
-          transform: translateX(50px);
+  transform: translateX(50px);
   text-align: right;
 }
 
@@ -245,7 +254,10 @@ li.category.isActive {
   display: inline-block;
 }
 
-.category--image:hover, .category--image:focus, .focused .category--image:hover, .focused .category--image:focus {
+.category--image:hover,
+.category--image:focus,
+.focused .category--image:hover,
+.focused .category--image:focus {
   opacity: 1;
   cursor: pointer;
 }
@@ -334,9 +346,9 @@ li.category.isActive {
 .navbar {
   overflow: hidden;
   width: 100%;
-    -webkit-box-shadow: 0 5px 6px -6px #999;
-    -moz-box-shadow: 0 5px 6px -6px #999;
-    box-shadow: 0 5px 6px -6px #999;
+  -webkit-box-shadow: 0 5px 6px -6px #999;
+  -moz-box-shadow: 0 5px 6px -6px #999;
+  box-shadow: 0 5px 6px -6px #999;
 }
 
 #my-navbar {
@@ -351,8 +363,8 @@ li.category.isActive {
 }
 
 .navbar-center {
-    position: absolute;
-    text-align: center;
+  position: absolute;
+  text-align: center;
 }
 
 .nav-item {
@@ -378,7 +390,8 @@ li.category.isActive {
   -moz-transition: background 0.3s ease-out;
   -o-transition: background 0.3s ease-out;
   transition: background 0.3s ease-out;
-  height: 1px; width: 1px; 
+  height: 1px;
+  width: 1px;
   overflow: hidden;
   clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
   clip: rect(1px, 1px, 1px, 1px);
@@ -386,12 +399,12 @@ li.category.isActive {
 
 .category--image:hover h6 {
   display: block;
-  height:auto;
+  height: auto;
   width: 156px;
   height: 350px;
   overflow: auto;
   clip: auto;
-  background: rgba(0, 0, 0, 0.1)
+  background: rgba(0, 0, 0, 0.1);
 }
 
 .card {
@@ -401,14 +414,13 @@ li.category.isActive {
   transition: background 0.2s ease-out;
 }
 .card:hover {
-  background: rgba(0, 0, 0, 0.02)
+  background: rgba(0, 0, 0, 0.02);
 }
 
 .full {
   width: 100%;
   height: 100%;
 }
-
 
 .popup {
   border: 1px solid;
@@ -418,7 +430,7 @@ li.category.isActive {
   opacity: 1;
   width: 200px;
   animation: fade 3000ms ease;
-  animation-iteration-count:infinite;
+  animation-iteration-count: infinite;
 }
 
 .btn {
@@ -426,9 +438,10 @@ li.category.isActive {
 }
 
 /* Removing default border when clicked */
-.btn:focus,.btn:active {
-   outline: none !important;
-   box-shadow: none;
+.btn:focus,
+.btn:active {
+  outline: none !important;
+  box-shadow: none;
 }
 
 .btn-sprout-light {
@@ -461,12 +474,12 @@ li.category.isActive {
 
 .btn-success {
   color: #000;
-  background: rgb(245,255,245);
+  background: rgb(245, 255, 245);
 }
 
 .btn-warning {
   color: #000;
-  background: rgb(255,255,245);
+  background: rgb(255, 255, 245);
 }
 
 .btn-warning:hover {
@@ -474,7 +487,7 @@ li.category.isActive {
 }
 
 .btn-outline-warning a {
-  color: rgb(255,195,0);
+  color: rgb(255, 195, 0);
 }
 
 .btn-outline-warning a:hover {
@@ -487,114 +500,116 @@ li.category.isActive {
 
 .btn-primary {
   color: #000;
-  background: rgb(245,245,255);
+  background: rgb(245, 245, 255);
 }
 
 .btn-outline-dark {
   color: #000;
-  background: rgba(145,145,145, 0.0);
+  background: rgba(145, 145, 145, 0);
   border-radius: 3px;
 }
 
 .btn-outline-dark:hover {
   color: #000;
-  background: rgba(45,45,45, 0.08);
+  background: rgba(45, 45, 45, 0.08);
 }
 
 @keyframes fade {
-  0%,100% { opacity: 0 }
-  30%, 70% { opacity: 1 }
+  0%,
+  100% {
+    opacity: 0;
+  }
+  30%,
+  70% {
+    opacity: 1;
+  }
 }
 
 #article {
-      -moz-transform: translateY(0.25rem);
-      -webkit-transform: translateY(0.25rem);
-      -ms-transform: translateY(0.25rem);
-      transform: translateY(0.25rem);
-      -moz-transition: opacity 0.325s ease-in-out, -moz-transform 0.325s ease-in-out;
-      -webkit-transition: opacity 0.325s ease-in-out, -webkit-transform 0.325s ease-in-out;
-      -ms-transition: opacity 0.325s ease-in-out, -ms-transform 0.325s ease-in-out;
-      transition: opacity 0.325s ease-in-out, transform 0.325s ease-in-out;
-      padding: 4.5rem 2.5rem 1.5rem 2.5rem ;
-      position: relative;
-      width: 40rem;
-      max-width: 100%;
-      background-color: rgba(27, 31, 34, 0.85);
-      border-radius: 4px;
-      opacity: 0;
-    }
+  -moz-transform: translateY(0.25rem);
+  -webkit-transform: translateY(0.25rem);
+  -ms-transform: translateY(0.25rem);
+  transform: translateY(0.25rem);
+  -moz-transition: opacity 0.325s ease-in-out, -moz-transform 0.325s ease-in-out;
+  -webkit-transition: opacity 0.325s ease-in-out,
+    -webkit-transform 0.325s ease-in-out;
+  -ms-transition: opacity 0.325s ease-in-out, -ms-transform 0.325s ease-in-out;
+  transition: opacity 0.325s ease-in-out, transform 0.325s ease-in-out;
+  padding: 4.5rem 2.5rem 1.5rem 2.5rem;
+  position: relative;
+  width: 40rem;
+  max-width: 100%;
+  background-color: rgba(27, 31, 34, 0.85);
+  border-radius: 4px;
+  opacity: 0;
+}
 
-      #article.active {
-        -moz-transform: translateY(0);
-        -webkit-transform: translateY(0);
-        -ms-transform: translateY(0);
-        transform: translateY(0);
-        opacity: 1;
-      }
+#article.active {
+  -moz-transform: translateY(0);
+  -webkit-transform: translateY(0);
+  -ms-transform: translateY(0);
+  transform: translateY(0);
+  opacity: 1;
+}
 
-      #article .close {
-        display: block;
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 4rem;
-        height: 4rem;
-        cursor: pointer;
-        text-indent: 4rem;
-        overflow: hidden;
-        white-space: nowrap;
-      }
+#article .close {
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 4rem;
+  height: 4rem;
+  cursor: pointer;
+  text-indent: 4rem;
+  overflow: hidden;
+  white-space: nowrap;
+}
 
-        #article .close:before {
-          -moz-transition: background-color 0.2s ease-in-out;
-          -webkit-transition: background-color 0.2s ease-in-out;
-          -ms-transition: background-color 0.2s ease-in-out;
-          transition: background-color 0.2s ease-in-out;
-          content: '';
-          display: block;
-          position: absolute;
-          top: 0.75rem;
-          left: 0.75rem;
-          width: 2.5rem;
-          height: 2.5rem;
-          border-radius: 100%;
-          background-position: center;
-          background-size: 20px 20px;
-          background-repeat: no-repeat;
-        }
+#article .close:before {
+  -moz-transition: background-color 0.2s ease-in-out;
+  -webkit-transition: background-color 0.2s ease-in-out;
+  -ms-transition: background-color 0.2s ease-in-out;
+  transition: background-color 0.2s ease-in-out;
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0.75rem;
+  left: 0.75rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 100%;
+  background-position: center;
+  background-size: 20px 20px;
+  background-repeat: no-repeat;
+}
 
-        #article .close:hover:before {
-          background-color: rgba(255, 255, 255, 0.075);
-        }
+#article .close:hover:before {
+  background-color: rgba(255, 255, 255, 0.075);
+}
 
-        #article .close:active:before {
-          background-color: rgba(255, 255, 255, 0.175);
-        }
+#article .close:active:before {
+  background-color: rgba(255, 255, 255, 0.175);
+}
 
-    @media screen and (max-width: 736px) {
+@media screen and (max-width: 736px) {
+  #article {
+    padding: 3.5rem 2rem 0.5rem 2rem;
+  }
 
-      #article {
-        padding: 3.5rem 2rem 0.5rem 2rem ;
-      }
+  #article .close:before {
+    top: 0.875rem;
+    left: 0.875rem;
+    width: 2.25rem;
+    height: 2.25rem;
+    background-size: 14px 14px;
+  }
+}
 
-        #article .close:before {
-          top: 0.875rem;
-          left: 0.875rem;
-          width: 2.25rem;
-          height: 2.25rem;
-          background-size: 14px 14px;
-        }
-
-    }
-
-    @media screen and (max-width: 480px) {
-
-      #article {
-        padding: 3rem 1.5rem 0.5rem 1.5rem ;
-      }
-
-    }
-
+@media screen and (max-width: 480px) {
+  #article {
+    padding: 3rem 1.5rem 0.5rem 1.5rem;
+  }
+}
 
 #tree-jumbotron {
   background: #e9ffde;
@@ -664,12 +679,12 @@ li.category.isActive {
 
 .hr-star:after {
   position: relative;
-  top: -.8em;
+  top: -0.8em;
   display: inline-block;
   padding: 0 0.25em;
-  content: '\f005';
+  content: "\f005";
   font-family: FontAwesome;
-  font-size: 1.5em; 
+  font-size: 1.5em;
 }
 
 .hr-star {
@@ -678,7 +693,7 @@ li.category.isActive {
 
 .hr-star:after {
   color: rgba(55, 55, 55, 0.7);
-  background-color: #e9ffde; 
+  background-color: #e9ffde;
 }
 
 .title {
@@ -686,5 +701,4 @@ li.category.isActive {
 }
 
 #journal-container {
-
 }
