--- a/src/App.css
+++ b/src/App.css
@@ -18,20 +18,6 @@ a {
   color: rgba(50, 50, 50, 0.8);
 }
 
-.center-cropped {
-  padding-bottom: 100%;
-  overflow: hidden;
-  position: relative;
-}
-
-.card-img-left {
-  border-bottom-left-radius: calc(0.25rem - 1px);
-  border-top-left-radius: calc(0.25rem - 1px);
-  float: left;
-  padding-right: 1em;
-  margin-bottom: -1.25em;
-}
-
 a:hover,
 a:hover > * {
   color: grey;
@@ -39,13 +25,6 @@ a:hover > * {
 
 .largeform {
   font-size: 40px;
-}
-
-.categories--menu-container {
-  position: relative;
-  height: 100%;
-  height: calc(100vh - 150px);
-  width: 100%;
 }
 
 ul.categories {
@@ -95,215 +74,12 @@ ul.categories {
   max-height: 0;
 }
 
-w
-/*content*/
-.category--content {
-  position: absolute;
-  top: 50px;
-  white-space: nowrap;
-  right: 0;
-  -webkit-transform: translateX(100%);
-  transform: translateX(100%);
-}
+/* Activities Menu */
 
-.category--content h2 {
-  text-align: left;
-  font-size: 44px;
-  -webkit-transform: translateX(-50px);
-  transform: translateX(-50px);
-  text-transform: uppercase;
-  font-weight: bold;
-}
-
-.category--content .project-list {
-  padding: 0 0 0 0;
-}
-
-.category--content,
-.category--content .project-list,
-.category--content .project-list li {
-  text-align: left;
-}
-
-.category--name {
-  position: absolute;
-  white-space: nowrap;
-  width: calc(100% - 5px);
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-  padding-top: 5px;
-  margin-right: 0px;
-  border-top: 1px solid #666;
-  color: #bcbd8b;
-}
-
-.category--name h6 {
-  font-size: 16px;
-  color: inherit;
-  text-transform: capitalize;
-}
-
-.focused .category--name {
-  opacity: 0;
-}
-
-.projectlist--client {
-  font-size: 18px;
-  margin-bottom: 0px;
-  -webkit-text-stroke: 0;
-  text-transform: capitalize;
-  font-weight: bold;
-}
-
-.projectlist--byline {
-  font-size: 12px;
-  font-family: "Nothing You Could Do", sans-serif;
-}
-
-.projectlist--explore {
-  font-size: 12px;
-  font-weight: bold;
-  font-family: "Nothing You Could Do", sans-serif;
-  color: #bcbd8b;
-}
-
-.projectlist--complete {
-  font-size: 12px;
-  font-weight: bold;
-  color: #eff1ed;
-  font-family: "Nothing You Could Do", sans-serif;
-}
-
-/*last item content*/
-.isLast .category--content {
-  right: initial;
-  left: 0;
-  -webkit-transform: translateX(-100%);
-  transform: translateX(-100%);
-}
-
-.isLast .category--content h2 {
-  -webkit-transform: translateX(50px);
-  transform: translateX(50px);
-  text-align: right;
-}
-
-.isLast .category--content .project-list {
-  padding: 0 0px 0 0;
-}
-
-.isLast .category--content,
-.isLast .category--content .project-list,
-.isLast .category--content .project-list li {
-  text-align: right;
-}
-
-/*inactive states*/
-li.category {
-  -webkit-transition: -webkit-transform 500ms ease;
-  transition: -webkit-transform 500ms ease;
-  transition: transform 500ms ease;
-  transition: transform 500ms ease, -webkit-transform 500ms ease;
-  position: relative;
-  z-index: 1;
-}
-
-.category--content {
-  text-align: right;
-  z-index: -1;
-  visibility: hidden;
-  pointer-events: none;
-}
-
-.category--content .project-list li {
-  opacity: 0;
-  -webkit-transition: all 300ms ease;
-  transition: all 300ms ease;
-}
-
-.category--image-container {
-  -webkit-transition: all 500ms ease;
-  transition: all 500ms ease;
-}
-
-.category--miniimage-container {
-  -webkit-transition: all 500ms ease;
-  transition: all 500ms ease;
-}
-
-/*active states*/
-li.category.isActive {
-  z-index: 99;
-}
-
-.isActive .category--content {
-  z-index: 99;
-  visibility: visible;
-  pointer-events: all;
-}
-
-.isActive .category--content .project-list li {
-  opacity: 1;
-}
-
-/*image states*/
-
-.category--miniimage {
-  opacity: 1;
-  margin: 0;
-  display: inline-block;
-}
-
-.category--image:hover,
-.category--image:focus,
-.focused .category--image:hover,
-.focused .category--image:focus {
-  opacity: 1;
-  cursor: pointer;
-}
-
-.category--image {
-  opacity: 0.7;
-  -webkit-transition: opacity 500ms ease, width 500ms ease 100ms;
-  transition: opacity 500ms ease, width 500ms ease 100ms;
-}
-
-.focused .category--image {
-  opacity: 0.25;
-}
-
-.focused .isActive .category--image {
-  opacity: 0.75;
-}
-
-.category--closeButton {
-  opacity: 0;
-  text-align: center;
-  position: absolute;
-  width: 100%;
-  bottom: -5rem;
-  -webkit-transition: opacity 200ms ease;
-  transition: opacity 200ms ease;
-}
-
-.focused .isActive .category--closeButton {
-  opacity: 1;
-  z-index: 99;
-}
-
-.category--closeButton a {
-  margin: 0px;
-  padding: 0px;
-}
-
-/*hover state*/
-.category--image {
-  /*transition: width 500ms ease;*/
-}
-
-.categories--menu-container:not(.focused) li.category:hover .category--name {
-  border-color: #eee;
-  color: #eee;
+.card-columns {
+  margin: 20px;
+  display: flex;
+  flex-flow: row wrap;
 }
 
 .no-padding {
@@ -315,28 +91,6 @@ li.category.isActive {
   text-align: center;
   display: flex;
   justify-content: center;
-}
-
-#app-container {
-  width: 420px;
-  display: block;
-  position: relative;
-  margin: 10px auto;
-  background: #fff;
-  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2);
-  overflow: hidden;
-}
-
-#no-gutters {
-  margin-right: 0;
-  margin-left: 0;
-  padding-left: 0;
-  padding-right: 0;
-}
-
-.tyrone {
-  width: 100%;
-  height: 100%;
 }
 
 .bg-dark {
@@ -359,9 +113,6 @@ li.category.isActive {
   width: 40px;
 }
 
-.navbar-main {
-}
-
 .navbar-center {
   position: absolute;
   text-align: center;
@@ -375,46 +126,36 @@ li.category.isActive {
   box-shadow: inset 0 0px 0 white, inset 0 -4px 0 #64af22;
 }
 
-.category--image h6 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  color: white;
-  padding: 20px;
-  text-align: center;
-  color: rgb(10, 30, 10);
-  font-size: 1.3em;
-  -webkit-transition: background 0.3s ease-out;
-  -moz-transition: background 0.3s ease-out;
-  -o-transition: background 0.3s ease-out;
-  transition: background 0.3s ease-out;
-  height: 1px;
-  width: 1px;
-  overflow: hidden;
-  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-  clip: rect(1px, 1px, 1px, 1px);
-}
-
-.category--image:hover h6 {
-  display: block;
-  height: auto;
-  width: 156px;
-  height: 350px;
-  overflow: auto;
-  clip: auto;
-  background: rgba(0, 0, 0, 0.1);
+.card-container {
+  width: 22%;
+  margin: 15px;
+  display: flex;
 }
 
 .card {
-  -webkit-transition: background 0.2s ease-out;
-  -moz-transition: background 0.2s ease-out;
-  -o-transition: background 0.2s ease-out;
-  transition: background 0.2s ease-out;
+  margin-bottom: 0 !important;
+  display: flex !important;
+  -webkit-transition: all 0.1s ease-out;
+  -moz-transition: all 0.1s ease-out;
+  -o-transition: all 0.1s ease-out;
+  transition: all 0.1s ease-out;
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px, rgba(0, 0, 0, 0.05) 0px 0.5px 1px;
 }
-.card:hover {
+
+#hover-raised:hover {
+  top: -3px;
   background: rgba(0, 0, 0, 0.02);
+  box-shadow: rgba(0, 0, 0, 0.04) 0px 10px 20px,
+    rgba(0, 0, 0, 0.08) 0px 8px 12px;
+}
+
+.activity-card {
+  margin: 0;
+}
+
+.activity-card-footer {
+  margin: 0;
+  bottom: 0;
 }
 
 .full {
@@ -698,7 +439,4 @@ li.category.isActive {
 
 .title {
   font-weight: 500;
-}
-
-#journal-container {
 }
