Cleaning up modal styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -441,6 +441,20 @@ ul.categories {
   background-color: #e9ffde;
 }
 
-.title {
+// Activity Form
+
+.input {
+  border-radius: 4px;
+}
+
+.modal-title {
   font-weight: 500;
+  margin-bottom: 24px;
+}
+
+// Entry Form
+
+.em {
+  width: 1.5em;
+  align-self: center;
 }
