--- a/src/App.scss
+++ b/src/App.scss
@@ -126,7 +126,8 @@ ul.categories {
 }
 
 .nav-link:hover {
-  box-shadow: inset 0 0px 0 white, inset 0 -4px 0 $green;
+  box-shadow: inset 0 0px 0 white, inset 0 -2px 0 $green;
+  transition: all 300ms;
 }
 
 .card-container {
@@ -186,7 +187,8 @@ ul.categories {
 .btn:focus,
 .btn:active {
   outline: none !important;
-  box-shadow: none;
+  outline-offset: none !important;
+  box-shadow: none !important;
 }
 
 .btn-sprout-light {
@@ -441,6 +443,25 @@ ul.categories {
   background-color: #e9ffde;
 }
 
+// Menu
+
+#menu-categories {
+  display: flex;
+  margin: 24px 24px 0 24px;
+}
+
+.menu-category-item {
+  margin: 24px 0 24px 0;
+}
+
+.menu-category-group {
+  margin-left: 24px;
+  margin-right: 24px;
+}
+
+.btn-group .btn.active {
+}
+
 // Activity Form
 
 .input {
@@ -457,4 +478,9 @@ ul.categories {
 .em {
   width: 1.5em;
   align-self: center;
+}
+
+.form-control {
+  font-size: 16px;
+  padding: 16px;
 }
