--- a/src/App.scss
+++ b/src/App.scss
@@ -149,19 +149,18 @@ ul.categories {
 
 .activity-card {
   flex-direction: column;
-  margin-bottom: 0;
   display: flex;
-  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px, rgba(0, 0, 0, 0.05) 0px 0.5px 1px;
+  box-shadow: 0 0 5px 2px #fff;
   border: rgba(0, 0, 0, 0.1) solid 1px;
   border-radius: 8px;
-  top: 0;
-  transition: all 100ms ease-out;
+  transform: scale(1);
+  transition: all 150ms ease-out;
 
   &:hover {
-    top: -3px;
+    transform: scale(1.02);
     background: rgba(0, 0, 0, 0.02);
     box-shadow: rgba(0, 0, 0, 0.08) 0px 8px 12px;
-    transition: all 100ms ease-out;
+    transition: all 150ms ease-out;
   }
 
   .card-img-top {
