--- a/src/App.scss
+++ b/src/App.scss
@@ -146,13 +146,13 @@ ul.categories {
   border: rgba(0, 0, 0, 0.1) solid 1px;
   border-radius: 8px;
   transform: scale(1);
-  transition: all 150ms ease-out;
+  transition: all 200ms cubic-bezier(0.01, 0.55, 0.41, 0.99);
 
   &:hover {
     transform: scale(1.02);
     background: rgba(0, 0, 0, 0.02);
     box-shadow: rgba(0, 0, 0, 0.08) 0px 8px 12px;
-    transition: all 150ms ease-out;
+    transition: all 200ms cubic-bezier(0.01, 0.55, 0.41, 0.99);
   }
 
   .card-img-top {
